--- a/notebook/vehicle_collision_classification.ipynb
+++ b/notebook/vehicle_collision_classification.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,29 @@
     "# Set font scale and style\n",
     "sns.set(font_scale = 1.5)\n",
     "sns.set_style('ticks')\n",
-    "sns.set()"
+    "sns.set()\n",
+    "\n",
+    "# Machine learning models\n",
+    "import xgboost as xgb\n",
+    "from xgboost.sklearn import XGBClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "# Model performance metrics\n",
+    "from sklearn.model_selection import cross_val_score, cross_val_predict\n",
+    "from sklearn.metrics import confusion_matrix, classification_report, accuracy_score, auc,recall_score\n",
+    "from sklearn.metrics import roc_curve, roc_auc_score, average_precision_score, precision_recall_curve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run some files containing custom functions\n",
+    "%run -i '../scripts/helper_functions.py'"
    ]
   },
   {
@@ -666,217 +688,6 @@
    "metadata": {},
    "source": [
     "# Machine Learning "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1. Import models and metrics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Machine learning models\n",
-    "import xgboost as xgb\n",
-    "from xgboost.sklearn import XGBClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.svm import SVC\n",
-    "\n",
-    "# Model performance metrics\n",
-    "from sklearn.model_selection import cross_val_score, cross_val_predict\n",
-    "from sklearn.metrics import confusion_matrix, classification_report, accuracy_score, auc,recall_score\n",
-    "from sklearn.metrics import roc_curve, roc_auc_score, average_precision_score, precision_recall_curve"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. Model selection cross-validation function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 142,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Model selection by cross-validation\n",
-    "def model_selection_cv(model, n_training_samples, n_training_labels, cv_fold, scoring = None):\n",
-    "    \n",
-    "        # Fit the training set\n",
-    "        model.fit(n_training_samples, n_training_labels)\n",
-    "        \n",
-    "        # Compute accuracy on 10-fold cross validation\n",
-    "        score = cross_val_score(model, n_training_samples, n_training_labels, \n",
-    "                                cv = cv_fold, scoring = scoring)\n",
-    "\n",
-    "        # Make prediction on 10-fold cross validation\n",
-    "        y_val_pred = cross_val_predict(model, n_training_samples, n_training_labels, cv = cv_fold)\n",
-    "\n",
-    "        # Make probability prediction on 10-fold cross validation\n",
-    "        y_pred_proba = cross_val_predict(model,n_training_samples, n_training_labels, \n",
-    "                                         cv = cv_fold, method = 'predict_proba')[:,1]\n",
-    "\n",
-    "        # Print results\n",
-    "        print('****************************************************************************')\n",
-    "        print('CV score: %f (%f)'%(score.mean(), score.std()))\n",
-    "        print('AUROC: %f'%(roc_auc_score(n_training_labels, y_pred_proba)))\n",
-    "        print('AUPRC: %f'%(average_precision_score(n_training_labels, y_pred_proba)))\n",
-    "        print('Predicted classes:', np.unique(y_val_pred))\n",
-    "        print('Confusion matrix:\\n', confusion_matrix(n_training_labels, y_val_pred))\n",
-    "        print('Classification report:\\n', classification_report(n_training_labels, y_val_pred))\n",
-    "        print('****************************************************************************')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3. Test prediction function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Model prediction on the test set\n",
-    "def Test_Prediction(model, n_training_samples, n_training_labels, n_test_samples, n_test_labels):\n",
-    "   \n",
-    "        # Fit the training set\n",
-    "        model.fit(n_training_samples, n_training_labels)\n",
-    "\n",
-    "        # Make prediction on the test set\n",
-    "        y_predict = model.predict(n_test_samples)\n",
-    "\n",
-    "        # Compute the accuracy of the model\n",
-    "        accuracy = accuracy_score(n_test_labels, y_predict)\n",
-    "\n",
-    "        # Predict probability\n",
-    "        y_predict_proba = model.predict_proba(n_test_samples)[:,1]\n",
-    "        \n",
-    "        print('****************************************************************************')\n",
-    "        print('Test accuracy:  %f'%(accuracy))\n",
-    "        print('AUROC: %f'%(roc_auc_score(n_test_labels, y_predict_proba)))\n",
-    "        print('AUPRC: %f'%(average_precision_score(n_test_labels, y_predict_proba)))\n",
-    "        print('Predicted classes:', np.unique(y_predict))\n",
-    "        print('Confusion matrix:\\n', confusion_matrix(n_test_labels, y_predict))\n",
-    "        print('Classification report:\\n', classification_report(n_test_labels, y_predict))\n",
-    "        print('****************************************************************************')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4. ROC and PR curves function for the cross-validation training set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 144,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ROC and PR Curves for the Cross-Validation Training Set\n",
-    "def Plot_ROC_Curve_and_PRC_Cross_Val(model, n_training_samples, n_training_labels, color= None, label =None):\n",
-    "                                                \n",
-    "    model.fit(n_training_samples, n_training_labels)\n",
-    "\n",
-    "    y_pred_proba = cross_val_predict(model, n_training_samples, n_training_labels, cv =5,\n",
-    "                                     method = \"predict_proba\")\n",
-    "\n",
-    "    # Compute the fpr and tpr for each classifier\n",
-    "    fpr, tpr, thresholds = roc_curve(n_training_labels, y_pred_proba[:,1])\n",
-    "    \n",
-    "    # Compute the precisions and recalls for the classifier\n",
-    "    precisions, recalls, thresholds = precision_recall_curve(n_training_labels, y_pred_proba[:,1])\n",
-    "    \n",
-    "    # Compute the area under the ROC curve for each classifier\n",
-    "    area_auc =roc_auc_score(n_training_labels, y_pred_proba[:,1])\n",
-    "    \n",
-    "    # Compute the area under the PR curve for the classifier\n",
-    "    area_prc = auc(recalls, precisions)\n",
-    "    \n",
-    "    # ROC Curve\n",
-    "    plt.subplot(121)\n",
-    "    plt.plot(fpr, tpr, color = color, label = (label) %area_auc)\n",
-    "    plt.plot([0,1], [0,1], 'k--')\n",
-    "    plt.axis([0,1,0,1])\n",
-    "    plt.xlabel('False positive rate (FPR)')\n",
-    "    plt.ylabel('True positive rate (TPR)')\n",
-    "    plt.title('ROC Curve for the Cross-Validation Training Set')\n",
-    "    plt.legend(loc = 'best')\n",
-    "    \n",
-    "    # PR Curve\n",
-    "    plt.subplot(122)\n",
-    "    plt.plot(recalls, precisions, color = color, label = (label) %area_prc)\n",
-    "    plt.xlabel('Recall')\n",
-    "    plt.ylabel('Precision')\n",
-    "    plt.title('Precision-Recall Curve for the Cross-Validation Training Set')\n",
-    "    plt.legend(loc = 'best')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5. ROC and PR curves function for the test set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 145,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ROC and PR Curves\n",
-    "def Plot_ROC_Curve_and_PRC(model, n_training_samples, n_training_labels, n_test_samples, n_test_labels,\n",
-    "                         color= None, label =None): \n",
-    "    \n",
-    "    # fit the model\n",
-    "    model.fit(n_training_samples, n_training_labels)\n",
-    "    \n",
-    "    # Predict probability\n",
-    "    y_pred_proba = model.predict_proba(n_test_samples)[:, 1]\n",
-    "\n",
-    "    # Compute the fpr and tpr for each classifier\n",
-    "    fpr, tpr, thresholds = roc_curve(n_test_labels, y_pred_proba)\n",
-    "    \n",
-    "    # Compute the precisions and recalls for the classifier\n",
-    "    precisions, recalls, thresholds = precision_recall_curve(n_test_labels, y_pred_proba)\n",
-    "    \n",
-    "    # Compute the area under the ROC curve for each classifier\n",
-    "    area_auc =roc_auc_score(n_test_labels, y_pred_proba)\n",
-    "    \n",
-    "    # Compute the area under the PR curve for the classifier\n",
-    "    area_prc = auc(recalls, precisions)\n",
-    "    \n",
-    "    # ROC Curve\n",
-    "    plt.subplot(121)\n",
-    "    plt.plot(fpr, tpr, color = color, label = (label) %area_auc)\n",
-    "    plt.plot([0,1], [0,1], 'k--')\n",
-    "    plt.axis([0,1,0,1])\n",
-    "    plt.xlabel('False positive rate (FPR)')\n",
-    "    plt.ylabel('True positive rate (TPR)')\n",
-    "    plt.title('ROC Curve for the Test Set')\n",
-    "    plt.legend(loc = 'best')\n",
-    "    \n",
-    "    # PR Curve\n",
-    "    plt.subplot(122)\n",
-    "    plt.plot(recalls, precisions, color = color, label = (label) %area_prc)\n",
-    "    plt.xlabel('Recall')\n",
-    "    plt.ylabel('Precision')\n",
-    "    plt.title('Precision-Recall Curve for the Test Set')\n",
-    "    plt.legend(loc = 'best')"
    ]
   },
   {
