--- a/notebook/cleaning_data.ipynb
+++ b/notebook/cleaning_data.ipynb
@@ -22,11 +22,13 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
+    "\n",
     "# Ignore deprecated warning\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "# Pandas and numpy for data manipulation\n",
+    "%matplotlib inline\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
@@ -37,9 +39,7 @@
     "# Set font scale and style\n",
     "sns.set(font_scale = 1.5)\n",
     "sns.set_style('ticks')\n",
-    "sns.set()\n",
-    "\n",
-    "%matplotlib inline"
+    "sns.set()"
    ]
   },
   {
