updated notebook 02-EDA

--- a/Canada_collision/notebooks/05-anomaly_detection.ipynb
+++ b/Canada_collision/notebooks/05-anomaly_detection.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -62,23 +62,34 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# Anomaly detection models\n",
+    "# Anomaly detection models from sklearn\n",
     "from sklearn.svm import OneClassSVM\n",
     "from sklearn.covariance import EllipticEnvelope\n",
     "from sklearn.ensemble import IsolationForest\n",
     "from sklearn.neighbors import LocalOutlierFactor\n",
     "\n",
-    "# Pickle\n",
-    "import joblib\n",
+    "# Anomaly detection models from pyod\n",
+    "from pyod.models.abod import ABOD\n",
+    "from pyod.models.cblof import CBLOF\n",
+    "from pyod.models.feature_bagging import FeatureBagging\n",
+    "from pyod.models.hbos import HBOS\n",
+    "from pyod.models.iforest import IForest\n",
+    "from pyod.models.knn import KNN\n",
+    "from pyod.models.lof import LOF\n",
+    "from pyod.models.mcd import MCD\n",
+    "from pyod.models.ocsvm import OCSVM\n",
+    "\n",
+    "from pyod.utils.data import evaluate_print\n",
+    "from pyod.utils.example import visualize\n",
     "\n",
     "# Metrics\n",
     "from sklearn.metrics import confusion_matrix, classification_report, accuracy_score, f1_score\n",
-    "from sklearn.metrics import roc_curve, roc_auc_score, average_precision_score"
+    "from sklearn.metrics import roc_curve, roc_auc_score, average_precision_score, recall_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,30 +333,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['C_YEAR', 'C_MNTH', 'C_WDAY', 'C_HOUR', 'FATAL', 'C_VEHS', 'C_CONF',\n",
-       "       'C_RCFG', 'C_WTHR', 'C_RSUR', 'C_RALN', 'C_TRAF', 'V_ID', 'V_TYPE',\n",
-       "       'V_YEAR', 'P_ID', 'P_SEX', 'P_AGE', 'P_PSN', 'P_ISEV', 'P_SAFE',\n",
-       "       'P_USER', 'C_CASE'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -356,7 +343,7 @@
        "(3817613, 23)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +382,7 @@
        "Name: FATAL, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -424,7 +411,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reduce the dataset"
+    "## Reduce the Dataset"
    ]
   },
   {
@@ -436,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,36 +478,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Feature matrix and class label\n",
-    "X, y = df_small.drop(['P_ID', 'V_ID', 'FATAL'], axis = 1), df_small['FATAL']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Size of the data: (38177, 20) (38177,)\n"
+      "Data size: (38177, 20) (38177,)\n"
      ]
     }
    ],
    "source": [
-    "print('Size of the data:', X.shape, y.shape)"
+    "# Feature matrix and class label\n",
+    "X, y = df_small.drop(['P_ID', 'V_ID', 'FATAL'], axis = 1), df_small['FATAL']\n",
+    "print('Data size:', X.shape, y.shape)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a Test Set"
+    "## 1. Create a Test Set"
    ]
   },
   {
@@ -532,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -589,12 +568,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  Data Pre-processing"
+    "##  2. Data Pre-processing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,15 +601,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training set size after pre-processing: (30541, 128)\n",
-      "Test set size after pre-processing: (7636, 128)\n"
+      "Training set size after pre-processing: (30541, 130)\n",
+      "Test set size after pre-processing: (7636, 130)\n"
      ]
     }
    ],
@@ -641,8 +620,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Dimensionality Reduction"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PCA\n",
+    "pca = PCA(n_components = 120)  \n",
+    "X_train_pca = pca.fit_transform(X_train_scaled)\n",
+    "X_test_pca = pca.transform(X_test_scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set size after PCA: (30541, 120)\n",
+      "Test set size after PCA: (7636, 120)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Size of the data after PCA\n",
+    "print('Training set size after PCA:', X_train_pca.shape)\n",
+    "print('Test set size after PCA:', X_test_pca.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,60 +672,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model training and evaluation\n",
-    "\n",
-    "We will use the optimal hyperparameters obtained in the validation set (see the notenook anomaly_detection_tune_hyperparameters) to train and test the models in original dataset. We note that sklearn anomaly detection models are unsupervised and they output labeled 1 for inliers and labeled -1 for outliers (anomaly). We have rescaled the ouput such that the predicted output is given by\n",
-    "\n",
-    "$$\\hat y = \\frac{[max(\\hat y) -\\hat y]}{2} \\in [0,1],$$\n",
-    "\n",
-    "where\n",
-    "- 0: Normal (Non-fraudulent transactions)\n",
-    "\n",
-    "- 1: Anomalies (Fraudulent transactions)"
+    "# Models"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. One Class SVM"
+    "## 1. Isolation Forest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy:  0.892745\n",
-      "Test AUROC: 0.565638\n",
-      "Test AUPRC: 0.020917\n",
-      "Test confusion matrix:\n",
-      " [[6789  724]\n",
-      " [  95   28]]\n",
-      " Test classification report:\n",
+      "\n",
+      "On Training Data:\n",
+      "Accuracy:  0.897711\n",
+      "AUROC: 0.666966\n",
+      "AUPRC: 0.038638\n",
+      "Confusion matrix:\n",
+      " [[27207  2844]\n",
+      " [  280   210]]\n",
+      "Classification report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.99      0.90      0.94      7513\n",
-      "           1       0.04      0.23      0.06       123\n",
+      "           0       0.99      0.91      0.95     30051\n",
+      "           1       0.07      0.43      0.12       490\n",
       "\n",
-      "    accuracy                           0.89      7636\n",
-      "   macro avg       0.51      0.57      0.50      7636\n",
-      "weighted avg       0.97      0.89      0.93      7636\n",
+      "    accuracy                           0.90     30541\n",
+      "   macro avg       0.53      0.67      0.53     30541\n",
+      "weighted avg       0.98      0.90      0.93     30541\n",
+      "\n",
+      "*****************************************************************************\n",
+      "\n",
+      "On Test Data:\n",
+      "Accuracy:  0.902829\n",
+      "AUROC: 0.682720\n",
+      "AUPRC: 0.043652\n",
+      "Confusion matrix:\n",
+      " [[6838  675]\n",
+      " [  67   56]]\n",
+      "Classification report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.99      0.91      0.95      7513\n",
+      "           1       0.08      0.46      0.13       123\n",
+      "\n",
+      "    accuracy                           0.90      7636\n",
+      "   macro avg       0.53      0.68      0.54      7636\n",
+      "weighted avg       0.98      0.90      0.94      7636\n",
       "\n",
       "*****************************************************************************\n"
      ]
     }
    ],
    "source": [
-    "model_ocsvm = OneClassSVM(kernel = 'rbf', gamma='auto', nu = 0.1).fit(X_train_scaled) # Train model\n",
-    "y_ocsvm_pred = model_ocsvm.predict(X_test_scaled) # Prediction on the test set\n",
-    "y_ocsvm_pred = (y_ocsvm_pred.max() - y_ocsvm_pred)*0.5 # Rescale the prediction as noted above\n",
-    "evalaute_performance(y_test, y_ocsvm_pred) # Evaluate and print model performance on the test set"
+    "# train IForest detector\n",
+    "clf_name = 'IForest'\n",
+    "clf = IForest()\n",
+    "clf.fit(X_train_pca)\n",
+    "\n",
+    "# get the prediction labels and outlier scores of the training data\n",
+    "y_train_pred = clf.labels_  # binary labels (0: inliers, 1: outliers)\n",
+    "y_train_scores = clf.decision_scores_  # raw outlier scores\n",
+    "\n",
+    "# get the prediction on the test data\n",
+    "y_test_pred = clf.predict(X_test_pca)  # outlier labels (0 or 1)\n",
+    "y_test_scores = clf.decision_function(X_test_pca)  # outlier scores\n",
+    "\n",
+    "# evaluate and print the results\n",
+    "print(\"\\nOn Training Data:\")\n",
+    "evalaute_performance(y_train, y_train_pred)\n",
+    "\n",
+    "print(\"\\nOn Test Data:\")\n",
+    "evalaute_performance(y_test, y_test_pred)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
