--- a/Ottawa_collision/notebooks/03a-supervised_models_binaryclass.ipynb
+++ b/Ottawa_collision/notebooks/03a-supervised_models_binaryclass.ipynb
@@ -168,6 +168,25 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>LOGGERS WAY btwn KINGDON MINE RD &amp; GALETTA SID...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.033218e+06</td>\n",
+       "      <td>2014-06-20</td>\n",
+       "      <td>23:15:00</td>\n",
+       "      <td>01 - Clear</td>\n",
+       "      <td>01 - Dry</td>\n",
+       "      <td>10 - No control</td>\n",
+       "      <td>01 - Non intersection</td>\n",
+       "      <td>07 - Dark</td>\n",
+       "      <td>01 - Fatal injury</td>\n",
+       "      <td>07 - SMV other</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>June</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
        "      <td>4</td>\n",
        "      <td>MONTREAL RD @ BATHGATE DR/BURMA RD</td>\n",
        "      <td>373224.24847</td>\n",
@@ -186,7 +205,7 @@
        "      <td>Tuesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "      <td>5</td>\n",
        "      <td>RICHMOND RD btwn FALLOWFIELD RD &amp; RUSHMORE RD</td>\n",
        "      <td>358156.20481</td>\n",
@@ -204,64 +223,38 @@
        "      <td>August</td>\n",
        "      <td>Tuesday</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>6</td>\n",
-       "      <td>PARKDALE AVE btwn RUSKIN ST &amp; INGLEWOOD PL</td>\n",
-       "      <td>365558.54334</td>\n",
-       "      <td>5.028338e+06</td>\n",
-       "      <td>2014-04-19</td>\n",
-       "      <td>10:22:00</td>\n",
-       "      <td>01 - Clear</td>\n",
-       "      <td>01 - Dry</td>\n",
-       "      <td>10 - No control</td>\n",
-       "      <td>01 - Non intersection</td>\n",
-       "      <td>01 - Daylight</td>\n",
-       "      <td>01 - Fatal injury</td>\n",
-       "      <td>06 - SMV unattended vehicle</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>April</td>\n",
-       "      <td>Saturday</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Record                                       Location             X  \\\n",
-       "0       1                          RIDEAU ST @ WALLER ST  368282.69327   \n",
-       "1       2       HINES RD btwn INNOVATION DR & SOLANDT RD  350172.08885   \n",
-       "2       4             MONTREAL RD @ BATHGATE DR/BURMA RD  373224.24847   \n",
-       "3       5  RICHMOND RD btwn FALLOWFIELD RD & RUSHMORE RD  358156.20481   \n",
-       "4       6     PARKDALE AVE btwn RUSKIN ST & INGLEWOOD PL  365558.54334   \n",
+       "   Record                                           Location             X  \\\n",
+       "0       1                              RIDEAU ST @ WALLER ST  368282.69327   \n",
+       "1       2           HINES RD btwn INNOVATION DR & SOLANDT RD  350172.08885   \n",
+       "2       3  LOGGERS WAY btwn KINGDON MINE RD & GALETTA SID...           NaN   \n",
+       "3       4                 MONTREAL RD @ BATHGATE DR/BURMA RD  373224.24847   \n",
+       "4       5      RICHMOND RD btwn FALLOWFIELD RD & RUSHMORE RD  358156.20481   \n",
        "\n",
        "              Y        Date      Time Environment Road_Surface  \\\n",
        "0  5.032275e+06  2014-02-21  06:07:00   02 - Rain     02 - Wet   \n",
        "1  5.022740e+06  2014-08-02  13:55:00  01 - Clear     01 - Dry   \n",
-       "2  5.034518e+06  2014-07-29  16:31:00  01 - Clear     01 - Dry   \n",
-       "3  5.012570e+06  2014-08-05  20:05:00  01 - Clear     01 - Dry   \n",
-       "4  5.028338e+06  2014-04-19  10:22:00  01 - Clear     01 - Dry   \n",
+       "2  5.033218e+06  2014-06-20  23:15:00  01 - Clear     01 - Dry   \n",
+       "3  5.034518e+06  2014-07-29  16:31:00  01 - Clear     01 - Dry   \n",
+       "4  5.012570e+06  2014-08-05  20:05:00  01 - Clear     01 - Dry   \n",
        "\n",
        "       Traffic_Control          Collision_Location          Light  \\\n",
        "0  01 - Traffic signal        03 - At intersection      07 - Dark   \n",
        "1      10 - No control  04 - At/near private drive  01 - Daylight   \n",
-       "2  01 - Traffic signal        03 - At intersection  01 - Daylight   \n",
-       "3      10 - No control       01 - Non intersection      05 - Dusk   \n",
-       "4      10 - No control       01 - Non intersection  01 - Daylight   \n",
+       "2      10 - No control       01 - Non intersection      07 - Dark   \n",
+       "3  01 - Traffic signal        03 - At intersection  01 - Daylight   \n",
+       "4      10 - No control       01 - Non intersection      05 - Dusk   \n",
        "\n",
-       "  Collision_Classification                  Impact_type  Year     Month  \\\n",
-       "0        01 - Fatal injury               07 - SMV other  2014  February   \n",
-       "1        01 - Fatal injury                   02 - Angle  2014    August   \n",
-       "2        01 - Fatal injury        05 - Turning movement  2014      July   \n",
-       "3        01 - Fatal injury               07 - SMV other  2014    August   \n",
-       "4        01 - Fatal injury  06 - SMV unattended vehicle  2014     April   \n",
-       "\n",
-       "   Week_day  \n",
-       "0    Friday  \n",
-       "1  Saturday  \n",
-       "2   Tuesday  \n",
-       "3   Tuesday  \n",
-       "4  Saturday  "
+       "  Collision_Classification            Impact_type  Year     Month  Week_day  \n",
+       "0        01 - Fatal injury         07 - SMV other  2014  February    Friday  \n",
+       "1        01 - Fatal injury             02 - Angle  2014    August  Saturday  \n",
+       "2        01 - Fatal injury         07 - SMV other  2014      June    Friday  \n",
+       "3        01 - Fatal injury  05 - Turning movement  2014      July   Tuesday  \n",
+       "4        01 - Fatal injury         07 - SMV other  2014    August   Tuesday  "
       ]
      },
      "execution_count": 3,
@@ -282,7 +275,7 @@
     {
      "data": {
       "text/plain": [
-       "(57768, 16)"
+       "(58338, 16)"
       ]
      },
      "execution_count": 4,
@@ -297,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -305,24 +298,24 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 57768 entries, 0 to 57767\n",
+      "RangeIndex: 58338 entries, 0 to 58337\n",
       "Data columns (total 16 columns):\n",
-      "Record                      57768 non-null int64\n",
-      "Location                    57768 non-null object\n",
+      "Record                      58338 non-null int64\n",
+      "Location                    58338 non-null object\n",
       "X                           57768 non-null float64\n",
-      "Y                           57768 non-null float64\n",
-      "Date                        57768 non-null object\n",
-      "Time                        57768 non-null object\n",
-      "Environment                 57767 non-null object\n",
-      "Road_Surface                57768 non-null object\n",
-      "Traffic_Control             57733 non-null object\n",
-      "Collision_Location          57762 non-null object\n",
-      "Light                       57766 non-null object\n",
-      "Collision_Classification    57768 non-null object\n",
-      "Impact_type                 57768 non-null object\n",
-      "Year                        57768 non-null int64\n",
-      "Month                       57768 non-null object\n",
-      "Week_day                    57768 non-null object\n",
+      "Y                           58338 non-null float64\n",
+      "Date                        58338 non-null object\n",
+      "Time                        58338 non-null object\n",
+      "Environment                 58337 non-null object\n",
+      "Road_Surface                58338 non-null object\n",
+      "Traffic_Control             58302 non-null object\n",
+      "Collision_Location          58332 non-null object\n",
+      "Light                       58336 non-null object\n",
+      "Collision_Classification    58338 non-null object\n",
+      "Impact_type                 58338 non-null object\n",
+      "Year                        58338 non-null int64\n",
+      "Month                       58338 non-null object\n",
+      "Week_day                    58338 non-null object\n",
       "dtypes: float64(2), int64(2), object(12)\n",
       "memory usage: 7.1+ MB\n"
      ]
@@ -349,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +351,7 @@
        "array([2014, 2015, 2016, 2017])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +402,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,30 +416,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Class Distribution"
+    "## Class Distribution\n",
+    "Below we show the percentages of class distribution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "03 - P.D. only           46790\n",
-       "02 - Non-fatal injury    10885\n",
-       "01 - Fatal injury           93\n",
-       "Name: Collision_Classification, dtype: int64"
+       "03 - P.D. only           80.990092\n",
+       "02 - Non-fatal injury    18.840207\n",
+       "01 - Fatal injury         0.169701\n",
+       "Name: Collision_Classification, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.Collision_Classification.value_counts()"
+    "df.Collision_Classification.value_counts()/len(df)*100"
    ]
   },
   {
@@ -460,12 +454,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The P.D (Property Damage) only and the Non-fatal injury classes can be combined to form a general Non-fatal injury class reducing the dataset to a binary class problem. "
+    "The P.D ( Property Damage ) only and the Non-fatal injury classes can be combined to form an effective Non-fatal injury class reducing the dataset to a binary class problem. As shown below, this is an extremely imbalanced data set with Fatal injury consisting only 0.2% of the data set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,24 +478,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Non-fatal injury    57675\n",
-       "Fatal injury           93\n",
-       "Name: Collision_Classification, dtype: int64"
+       "Non-fatal injury    99.830299\n",
+       "Fatal injury         0.169701\n",
+       "Name: Collision_Classification, dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.Collision_Classification.value_counts()"
+    "df.Collision_Classification.value_counts()/len(df)*100"
    ]
   },
   {
@@ -513,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -547,13 +541,13 @@
      "output_type": "stream",
      "text": [
       "Training set class distribution:\n",
-      " Non-fatal injury    99.839256\n",
-      "Fatal injury         0.160744\n",
+      " Non-fatal injury    99.831031\n",
+      "Fatal injury         0.168969\n",
       "Name: Collision_Classification, dtype: float64\n",
       "**************************************************\n",
       "Test set class distribution:\n",
-      " Non-fatal injury    99.83844\n",
-      "Fatal injury         0.16156\n",
+      " Non-fatal injury    99.828591\n",
+      "Fatal injury         0.171409\n",
       "Name: Collision_Classification, dtype: float64\n"
      ]
     }
@@ -566,15 +560,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training set size: (40437, 11) (40437,)\n",
-      "Test set size: (17331, 11) (17331,)\n"
+      "Training set size: (40836, 11) (40836,)\n",
+      "Test set size: (17502, 11) (17502,)\n"
      ]
     }
    ],
@@ -594,12 +588,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we saw above, there are some attributes with missing values. We will now impute the missing values in those attributes for a better performance"
+    "As we saw above, there are some attributes with missing values. We will impute the missing values. The missing categorical variable will be imputed with the mode, whereas the missing numerical variable will be imputed with the median. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
